               * Samsung: Galaxy Nexus, Galaxy S3, S6 (SM-G920F), S7, S7 Edge, S8 (SM-G950U)
               * Sony: A7R III, A9, DSC-RX0, DSC-RX10IV
               * Yi: M1
               * YUNEEC: CGO3, CGO3P
               * Xiaoyi: YIAC3 (YI 4k)

Tags         : Add possibility to merge tags by drag & drop.

IconView     : Add capability to re-organize the contents manually.

HTML Gallery : New Vanilla theme to emulate export to HTML from Adobe LightRoom.
HTML Gallery : New Blue Frame theme.
HTML Gallery : New Kiosk-Mode theme.

*****************************************************************************************************
BUGFIXES:

001 ==> 172650 - No export tools available.
002 ==> 149591 - The export menu is blank.
003 ==> 300424 - Export tools not detected.
004 ==> 327743 - MediaWiki export not displayed.
005 ==> 348146 - Export tools configuration module.
006 ==> 243275 - Crashing when calling configuration.
007 ==> 257134 - Crashes when entering its settings.
008 ==> 230666 - Crash during start.
009 ==> 306698 - Crashes after update to KDE.
010 ==> 207640 - Crashes immediately at startup, sometimes at closing.
011 ==> 245628 - Crash when enabling/disabling Facebook import/export.
012 ==> 097317 - sigsegv [New Thread 1100241184 (LWP 5665)].
013 ==> 245776 - Crashes when selecting Settings.
014 ==> 245775 - Crashes even without export tools installed.
015 ==> 254283 - Crash as soon as i click settings.
016 ==> 255733 - crash when reopening configuration dialog.
017 ==> 262050 - Crash after new install and scan to mysql database.
018 ==> 263871 - Crashed after searching for duplicates.
019 ==> 268242 - Crashes after I clicked on 'Settings'.
020 ==> 276882 - Add export tool buttons to toolbar.
021 ==> 284801 - Export to picasaweb crashes.
022 ==> 277669 - Crash after files moved.
023 ==> 281250 - Crash after disabling Export tools.
024 ==> 202637 - Crash trying to start export tool.