@@ -65,6 +65,7 @@ private:
     void textForSAlbum(SAlbum* a, int count, QString* header, QString* subLine) const;
     void textForDAlbum(DAlbum* a, int count, QString* header, QString* subLine) const;
     void textForFormat(const QModelIndex& index, QString* header, QString* subLine) const;
+    void textForMonth(const QModelIndex& index, QString* header, QString* subLine) const;
 
 private:
 
